[gd_scene load_steps=12 format=3 uid="uid://bpfdwxw0ns82y"]

[ext_resource type="PackedScene" uid="uid://dhcwgyrj6yyqn" path="res://game/tower.tscn" id="1_f5brq"]
[ext_resource type="Script" path="res://game/tower_game.gd" id="1_wyn0i"]
[ext_resource type="Script" path="res://util/segmented_progress_bar.gd" id="3_04nw0"]

[sub_resource type="Gradient" id="Gradient_8h8fd"]
colors = PackedColorArray(0, 0.215686, 0, 1, 0.430045, 0.442642, 0.0361582, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mr62e"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7eo4y"]
width = 1280
height = 1280
color_ramp = SubResource("Gradient_8h8fd")
noise = SubResource("FastNoiseLite_mr62e")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ka12n"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.286275)

[sub_resource type="SphereMesh" id="SphereMesh_n84cx"]
material = SubResource("StandardMaterial3D_ka12n")
radius = 35.0
height = 70.0

[sub_resource type="Gradient" id="Gradient_x5sah"]
colors = PackedColorArray(0.798878, 0.198027, 0.091634, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_14n25"]
gradient = SubResource("Gradient_x5sah")
fill_from = Vector2(1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_dss4a"]
radius = 401.011

[node name="TowerGame" type="Node2D"]
script = ExtResource("1_wyn0i")

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("NoiseTexture2D_7eo4y")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
position = Vector2(1, -0.500031)
scale = Vector2(11.483, 11.5)
mesh = SubResource("SphereMesh_n84cx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -643.0
offset_top = -641.0
offset_right = 637.0
offset_bottom = 639.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SegmentedProgressBar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
script = ExtResource("3_04nw0")
texture = SubResource("GradientTexture2D_14n25")
segments = 10
value = 1.0

[node name="Control4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tower" parent="." instance=ExtResource("1_f5brq")]

[node name="BonusReduce" type="Area2D" parent="Tower"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower/BonusReduce"]
shape = SubResource("CircleShape2D_dss4a")

[node name="Indicators" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Spawn" type="Timer" parent="."]

[connection signal="died" from="Tower" to="." method="_on_Tower_died"]
[connection signal="took_damage" from="Tower" to="." method="_on_tower_took_damage"]
[connection signal="body_entered" from="Tower/BonusReduce" to="." method="_on_bonus_reduce_body_entered"]
[connection signal="timeout" from="Spawn" to="." method="_on_spawn_timeout"]
